<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/subscription_plans"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/features_top_dimensions"
            android:drawableStart="@drawable/check_icon"
            android:gravity="start"
            android:text="@string/no_ads"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="italic"

            />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/features_top_dimensions"
            android:gravity="start"
            android:textStyle="italic"
            android:text="@string/image_to_text"
            android:drawableStart="@drawable/check_icon"
            android:textColor="@color/black"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/features_top_dimensions"
            android:gravity="start"
            android:drawableStart="@drawable/check_icon"
            android:textStyle="italic"
            android:text="@string/translates_languages"
            android:textColor="@color/black"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/check_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/features_top_dimensions"
            android:gravity="start"
            android:textStyle="italic"
            android:text="@string/unlimited_usage"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>
</layout>