<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data
        class="SubscriptionStatusDialogDataBinding"
        >

        <variable
            name="viewModel"
            type="imagetrack.app.trackobject.viewmodel.InAppViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D9000000"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/textlayoutdesign"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/thanksId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lines="1"
                android:text="@string/subscription_note"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/subscriptionTextId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subscriptionTextId"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/subscription_message"
                android:textSize="15sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/suscriptionDeatilId"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thanksId" />

            <TextView
                android:id="@+id/suscriptionDeatilId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/subscription_details"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/startingId"
                app:layout_constraintEnd_toEndOf="@+id/subscriptionTextId"
                app:layout_constraintStart_toStartOf="@+id/subscriptionTextId"
                app:layout_constraintTop_toBottomOf="@+id/subscriptionTextId" />

            <TextView
                android:id="@+id/startingId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/starting_time"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/expiry_time"
                app:layout_constraintEnd_toEndOf="@+id/suscriptionDeatilId"
                app:layout_constraintStart_toStartOf="@+id/suscriptionDeatilId"
                app:layout_constraintTop_toBottomOf="@+id/suscriptionDeatilId" />

            <TextView
                android:id="@+id/expiry_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/expiry_time"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/orderId"
                app:layout_constraintEnd_toEndOf="@+id/startingId"
                app:layout_constraintStart_toStartOf="@+id/startingId"
                app:layout_constraintTop_toBottomOf="@+id/startingId" />

            <TextView
                android:id="@+id/orderId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_id"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@+id/subscriptionButtonId"
                app:layout_constraintEnd_toEndOf="@+id/expiry_time"
                app:layout_constraintStart_toStartOf="@+id/expiry_time"
                app:layout_constraintTop_toBottomOf="@+id/expiry_time" />


            <Button
                android:id="@+id/subscriptionButtonId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/okbutton"
                android:onClick="@{()->viewModel.proceed()}"
                android:text="@string/proceed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderId" />


        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>