<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    >

    <data class="HistoryDataBinding">

        <variable
            name="viewModel"
            type="imagetrack.app.trackobject.viewmodel.HistoryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constaintId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/Red"
            app:layout_constraintBottom_toTopOf="@+id/ads_include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/historyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/delete_allId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:onClick="@{()->viewModel.deleteAll()}"

                android:padding="15dp"
                android:text="@string/delete_all"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/historyID"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/historyID" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/ads_include"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad"
            app:layout_constraintBottom_toTopOf="@+id/history_recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constaintId" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recyclerview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layoutAnimation="@anim/layout_animation"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/emptyId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ads_include" />

        <include
            android:id="@+id/emptyId"
            layout="@layout/empty_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/history_recyclerview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>